--- a/Rainfall/Rainfall.ipynb
+++ b/Rainfall/Rainfall.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#NEED TO FIGURE OUT A WAY TO SAVE THE MEANS/ SUMS OF THE PRECIPITATION DATAFRAME AND ANALYZE IT"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
