--- a/CDC.gov/Pdf to Dataframe.ipynb
+++ b/CDC.gov/Pdf to Dataframe.ipynb
@@ -10,11 +10,11 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: tabula-py in c:\\programdata\\anaconda3\\lib\\site-packages (2.0.4)\n",
-      "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (from tabula-py) (1.16.5)\n",
       "Requirement already satisfied: distro in c:\\programdata\\anaconda3\\lib\\site-packages (from tabula-py) (1.4.0)\n",
+      "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (from tabula-py) (1.16.5)\n",
       "Requirement already satisfied: pandas in c:\\programdata\\anaconda3\\lib\\site-packages (from tabula-py) (0.25.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas->tabula-py) (2019.3)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas->tabula-py) (2.8.0)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas->tabula-py) (2019.3)\n",
       "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.6.1->pandas->tabula-py) (1.12.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -35,8 +35,8 @@
      "text": [
       "Requirement already satisfied: pandas in c:\\programdata\\anaconda3\\lib\\site-packages (0.25.1)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2.8.0)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (1.16.5)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2019.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (1.16.5)\n",
       "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n"
      ]
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -265,13 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "[54.9, 57.7, 'Pennsylvania', 73.3, 81.0, 50.5, 69.0, 63.7, 'Rhode Island', 80.3, 76.8, 56.8, 60.7, 70.9, 'South Carolina', 69.2, 63.9, 54.1, 56.5, 62.1]\n"
      ]
     }
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +314,7 @@
        " ['Florida', 74.4, 52.4, 45.2, 62.1, 62.2]]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,6 +1561,7 @@
    ],
    "source": [
     "#Combining into a single df\n",
+    "#Can see the whole table from the pdf into a dataframe with the data being cleaned.\n",
     "finaldf = pandas.concat([df1,df2],ignore_index=True)\n",
     "finaldf"
    ]
